use glyphicon replace image

--- a/bootstrap-test.html
+++ b/bootstrap-test.html
@@ -111,21 +111,15 @@
             <ol>
                 <li>用例图只是用于和客户交流和沟通的，用于确定需求。
                     <label><input name="4-1" type="radio" value="y"></label>
-                    <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlKgfM4CkfSK8AD4mOms7E6wUgCa4ZS4zNY5OIL86a25QnyLfL5w"
-                            width="20px" height="20px">
+                    <span class="glyphicon glyphicon-ok"></span>
                     <label><input name="4-1" type="radio" value="n"></label>
-                    <img src="http://imgs.iaweg.com/pic/3d3dy5pY29ucG5nLmNvbS9wbmcvdmlzdGEtc29mdHdhcmUvcmVkLXgucG5n"
-                         width="20px" height="20px">
+                    <span class="glyphicon glyphicon-remove"></span>
                 </li>
                 <li>在状态图中终止状态在一个状态图中允许有任意多个。
                     <label><input name="4-2" type="radio" value="y"></label>
-                    <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlKgfM4CkfSK8AD4mOms7E6wUgCa4ZS4zNY5OIL86a25QnyLfL5w"
-                            width="20px" height="20px">
+                    <span class="glyphicon glyphicon-ok"></span>
                     <label><input name="4-2" type="radio" value="n"></label>
-                    <img src="http://imgs.iaweg.com/pic/3d3dy5pY29ucG5nLmNvbS9wbmcvdmlzdGEtc29mdHdhcmUvcmVkLXgucG5n"
-                         width="20px" height="20px">
+                    <span class="glyphicon glyphicon-remove"></span>
                 </li>
             </ol>
         </div>
